--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;800&display=swap");
 
 * {
   padding: 0;
@@ -33,8 +33,10 @@ main {
 }
 .card .card-title h1 {
   font-size: 15px;
+  font-weight: 200;
+  padding-bottom: 30px;
 }
-.advice p {
+.advice {
   font-size: 28px;
   color: #fff;
   text-align: center;
