--- a/style.css
+++ b/style.css
@@ -20,26 +20,27 @@ main {
   flex-direction: column;
   width: 500px;
   height: 300px;
-  justify-content: center;
+
   background-color: hsl(217, 19%, 24%);
   align-items: center;
-  align-self: center;
+
   padding: 10px;
   margin: auto 10px;
   border-radius: 5px;
 }
 .card .card-title {
   color: hsl(150, 100%, 66%);
+  padding-top: 30px;
 }
 .card .card-title h1 {
   font-size: 15px;
-  font-weight: 200;
-  padding-bottom: 30px;
 }
 .advice {
   font-size: 28px;
   color: #fff;
   text-align: center;
+  padding: 40px 0;
+  font-weight: 800;
 }
 .icon {
   position: absolute;
