--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main {
   background-color: hsl(217, 19%, 24%);
   align-items: center;
 
-  padding: 10px;
+  padding: 20px;
   margin: auto 10px;
   border-radius: 5px;
 }
@@ -46,8 +46,8 @@ main {
   position: absolute;
   bottom: -16px;
   background-color: hsl(150, 100%, 66%);
-  padding: 10px;
-  border-radius: 25px;
+  padding: 15px;
+  border-radius: 50%;
   width: 25px;
   height: 25px;
   cursor: pointer;
